@@ -4674,3 +4674,5 @@
          plusd.c,upd_fdc.c,wd_fdc.c},flash/am29f010.c,ide/{divide.c,zxatasp.c,
          zxcf.c},if1.c,if2.c,nic/{enc28j60.c,w5100.c},scld.c,spectranet.c},
          slt.c: remove unneeded "out of memory" error handling (Sergio).
+20150315 peripherals/disk/disk.c: use libspectrum_new0 where appropriate
+         (Sergio).
